--- a/libft/libft/Makefile
+++ b/libft/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: vame <marvin@42.fr>                        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2014/11/10 16:31:28 by vame              #+#    #+#              #
-#    Updated: 2015/03/14 11:21:48 by vame             ###   ########.fr        #
+#    Updated: 2015/03/16 09:31:51 by vame             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -25,7 +25,7 @@ SRC = ./ft_abs.c ./ft_atoi.c ./ft_bzero.c ./ft_isalnum.c \
 	  ./ft_putchar.c ./ft_putchar_fd.c ./ft_putendl.c \
 	  ./ft_putendl_fd.c ./ft_putnbr_fd.c ./ft_putnbr.c \
 	  ./ft_putstr_fd.c ./ft_putstr.c ./ft_strcat.c \
-	  ./ft_strchr.c ./ft_strclr.c ./ft_strcmp.c ./ft_atoi_l.c \
+	  ./ft_strchr.c ./ft_strclr.c ./ft_strcmp.c ./ft_atoi_l.c ./ft_lstiter_r.c \
 	  ./ft_strcpy.c ./ft_strdel.c ./ft_strdup.c ./ft_max.c ./ft_min.c \
 	  ./ft_strequ.c ./ft_striter.c ./ft_striteri.c ./ft_max_db.c ./ft_min_db.c \
 	  ./ft_strjoin.c ./ft_strlcat.c ./ft_strlen.c ./ft_abs_db.c \
